[gd_scene load_steps=21 format=2]

[ext_resource path="res://Fonts/Roboto-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/Roboto-BlackItalic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Prefabs/Scripts/Cacodemon.gd" type="Script" id=3]
[ext_resource path="res://Sprites/animations/autobuyer.tres" type="SpriteFrames" id=4]
[ext_resource path="res://Styles/Master Theme.tres" type="Theme" id=5]
[ext_resource path="res://Scripts/Cacodemon/Task.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.125, 0.125, 0.125, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 7.0
expand_margin_right = 7.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0
shadow_size = 3

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 0.2 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 7.0
expand_margin_right = 7.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 0.2 )
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 8.0
expand_margin_right = 8.0
expand_margin_top = 11.0
expand_margin_bottom = 11.0

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.14902, 0.14902, 0.14902, 1 )
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.411765, 0.411765, 0.411765, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=7]
size = 11
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -1
extra_spacing_bottom = -1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 14
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.14902, 0.14902, 0.14902, 1 )
shadow_size = 2

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.411765, 0.411765, 0.411765, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=12]
size = 11
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = -1
extra_spacing_bottom = -1
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0, 0, 0.85 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.305882, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 7.0
expand_margin_right = 7.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id=14]
draw_center = false

[node name="Demon" type="MarginContainer"]
margin_right = 125.0
margin_bottom = 101.0
rect_min_size = Vector2( 125, 0 )
size_flags_horizontal = 4
custom_constants/margin_right = 7
custom_constants/margin_top = 10
custom_constants/margin_left = 7
custom_constants/margin_bottom = 10
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="Panel" parent="."]
margin_left = 7.0
margin_top = 10.0
margin_right = 118.0
margin_bottom = 91.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="level up" type="Panel" parent="."]
visible = false
self_modulate = Color( 1, 0.909804, 0, 0.658824 )
margin_left = 7.0
margin_top = 10.0
margin_right = 118.0
margin_bottom = 91.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )

[node name="host" type="Panel" parent="."]
visible = false
self_modulate = Color( 1, 0.909804, 0, 0.658824 )
margin_left = 7.0
margin_top = 10.0
margin_right = 118.0
margin_bottom = 91.0
mouse_filter = 2
custom_styles/panel = SubResource( 3 )

[node name="v" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 10.0
margin_right = 118.0
margin_bottom = 91.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="v" type="VBoxContainer" parent="v"]
margin_right = 111.0
margin_bottom = 44.0

[node name="task" type="Panel" parent="v/v"]
margin_right = 111.0
margin_bottom = 35.0
rect_min_size = Vector2( 68, 35 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 4 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="f" type="Panel" parent="v/v/task"]
modulate = Color( 1, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -63.0
rect_min_size = Vector2( 2, 0 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="flair" type="Panel" parent="v/v/task/f"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
rect_min_size = Vector2( 2, 0 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text f" type="Label" parent="v/v/task"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
rect_min_size = Vector2( 55, 0 )
size_flags_horizontal = 6
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.804688, 0.804688, 0.804688, 1 )
text = "9,998
9,999"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="consumed spirits" type="Label" parent="v/v/task"]
self_modulate = Color( 1, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -5.0
rect_min_size = Vector2( 74, 0 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.803922, 0.803922, 0.803922, 1 )
custom_colors/font_color_shadow = Color( 0.235294, 0, 0, 1 )
text = "12.3e123"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="xp" type="Panel" parent="v/v"]
margin_top = 39.0
margin_right = 111.0
margin_bottom = 44.0
rect_min_size = Vector2( 68, 5 )
rect_pivot_offset = Vector2( 44, -31 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="f" type="Panel" parent="v/v/xp"]
modulate = Color( 0.827451, 0.117647, 0.866667, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -109.0
rect_min_size = Vector2( 2, 0 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/panel = SubResource( 10 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="flair" type="Panel" parent="v/v/xp/f"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
rect_min_size = Vector2( 2, 0 )
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text f" type="Label" parent="v/v/xp"]
visible = false
self_modulate = Color( 1, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
rect_min_size = Vector2( 55, 0 )
size_flags_horizontal = 6
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0.804688, 0.804688, 0.804688, 1 )
text = "9,998"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text t" type="Label" parent="v/v/xp"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -100.0
margin_right = -5.0
rect_min_size = Vector2( 55, 0 )
size_flags_horizontal = 6
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0.804688, 0.804688, 0.804688, 1 )
text = "9,999"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attach" type="Button" parent="v"]
margin_top = 54.0
margin_right = 111.0
margin_bottom = 81.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 5 )
text = "Attach to"

[node name="offscreen" type="MarginContainer" parent="."]
visible = false
margin_left = 7.0
margin_top = 10.0
margin_right = 118.0
margin_bottom = 91.0

[node name="bg" type="Panel" parent="offscreen"]
margin_right = 111.0
margin_bottom = 81.0
mouse_filter = 2
custom_styles/panel = SubResource( 13 )

[node name="Panel" type="Panel" parent="offscreen"]
margin_left = 39.0
margin_top = 24.0
margin_right = 71.0
margin_bottom = 56.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = SubResource( 14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="offscreen/Panel"]
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( 16, 16 )
frames = ExtResource( 4 )
frame = 6
playing = true
[connection signal="mouse_entered" from="." to="." method="_on_back_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="v/Attach" to="." method="_on_Attach_pressed"]
